@@ -2,6 +2,7 @@
  	Jelmer Vernooij <jelmer@vernstok.nl>
 
 Ctrlproxy 2.7:
+ * Don't crash on non-existing <networks> or <plugins>
  * Add 'debug' module for easier debugging
  * Make sure modules are never loaded twice (Daniel Poelzleithner
 											 <ctrlproxy@poelzi.org>)
